Fixed issue with Chat Bubble disappearing after user clicks on the trash can icon

--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,10 @@ pnpm-workspace.yaml
 # - Keep this .gitignore file updated
 # 
 # ============================================
+
+CLAUDE.md
+prompts/
+.wrangler/
+wrangler.toml
+node_modules/
+wrangler.jsonc
